# google-meet-transcript-bot

./: .dockerignore  .env.example  .gitignore  .repomixignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/rules/: skill-domain-routing.md
docs/: app-journey-story.md  codex-memory-protocol.md  codex-memory.md  codex-starter-prompt.md  deployment.md  session-sync.md
infra/proxmox/: lxc-config.conf
infra/scripts/: audio-healthcheck.sh  setup-lxc.sh
infra/systemd/: install.sh  meeting-assistant.service
plans/260519-2134-meeting-transcript-pipeline/: phase-01-scaffolding-oauth-calendar.md  phase-02-sqlite-state-scheduler.md  phase-03-playwright-login-storagestate.md  phase-04-playwright-meet-join.md  phase-05-pipewire-ffmpeg-audio-capture.md  phase-06-gemini-transcribe-summarize.md  phase-07-telegram-delivery.md  phase-09-pilot-tune.md  (+2 more)
scripts/: bot_first_login.py  bot_first_login_manual.py  calendar_first_login.py
src/: __init__.py  config.py  duration_format.py  entrypoint.py  health_server.py  main.py  runtime_audio.py  runtime_status.py
tests/: test_admin_manual_join.py  test_audio_recorder.py  test_calendar_classifier.py  test_discord_formatter.py  test_duration_format.py  test_gemini_pipeline.py  test_health.py  test_meet_joiner.py  test_meet_monitor.py  test_meetings_repo.py  test_participant_tracker.py  test_public_api.py  test_recorder_supervisor.py  test_runtime_audio.py  test_scheduler_job_runner.py  test_screenshot_capturer.py  test_session_keepalive.py  test_session_sink_isolation.py  test_telegram_formatter.py
(+55 files in other folders)
