[project]
name = "google-meet-transcript-bot"
version = "0.1.0"
description = "Self-hosted Google Meet transcript pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=46.0.0",
    "google-api-python-client>=2.187.0",
    "google-auth>=2.43.0",
    "google-auth-oauthlib>=1.2.3",
    "pydantic-settings>=2.12.0",
    "structlog>=25.5.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
